more examples of sources in config file

--- a/configs/sources.yaml
+++ b/configs/sources.yaml
@@ -5,7 +5,7 @@ data:
   save_dir: "plots"
   input_dir: "data/2022hc_cb6_22m/inputs"
   scc_dir: "data"
-  scc_filename: "SCCDownload-2025-0724-222826.csv"
+  scc_filename: "SCCDownload-2025-0708-202427.csv"
 
 # Analysis categories
 analysis_categories:
@@ -16,6 +16,36 @@ analysis_categories:
 
   aluminum:
     keywords: ["aluminum"]
+    scc_level: 3
+    pollutant: "PM25-PRI"
+  
+  # ship-and-vessel:
+  #   keywords: ["ship", "vessel"]
+  #   scc_level: 3
+  #   pollutant: "PM25-PRI"
+
+  electricity:
+    keywords: ["electric"]
+    scc_level: 2
+    pollutant: "PM25-PRI"
+
+  oil-and-gas:
+    keywords: ["oil and gas"]
+    scc_level: 2
+    pollutant: "PM25-PRI"
+
+  chemical:
+    keywords: ["chemical"]
+    scc_level: 3
+    pollutant: "PM25-PRI"
+
+  pulp-and-paper:
+    keywords: ["pulp and paper"]
+    scc_level: 2
+    pollutant: "PM25-PRI"
+
+  copper:
+    keywords: ["copper"]
     scc_level: 3
     pollutant: "PM25-PRI"
 
